--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="main" href="sAXhBKrBSeDSyDaOMNsSHBNhBJGs-tHDSeDCaFDm" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
